--- a/exercises/assets/css/style-1.css
+++ b/exercises/assets/css/style-1.css
@@ -11,6 +11,9 @@ input, button, textarea, select { font: inherit }
 
 /* ================= ENDS ================ */
 
+/* background color */
+body { background-color: lightcyan }
+
 /* Desktops */
 @media (min-width: 768px) { body { padding: 4% 20% } }
 	
@@ -18,6 +21,7 @@ input, button, textarea, select { font: inherit }
 @media (max-width: 767px) { body { padding: 12% 8% } }
 
 h1 {
+    color: blue;
     font-size: 84px;
     text-align: center;
     font-weight: normal;
@@ -26,16 +30,19 @@ h1 {
 }
 
 h2 {
+    color: blue;
     font-size: 36px;
     margin-bottom: 4px;
 }
 
 h3 {
+    color: blue;
     font-size: 24px;
     margin-bottom: 4px;  
 }
 
 p {
+    color: darkslateblue;
     font-size: 18px;
     font-family: sans-serif;
     line-height: 1.6;
