--- a/exercises/assets/css/style-4.css
+++ b/exercises/assets/css/style-4.css
@@ -11,7 +11,10 @@ input, button, textarea, select { font: inherit }
 
 /* ================= ENDS ================ */
 
-body { font-family: sans-serif; }  
+body { 
+    font-family: sans-serif;
+    background-color: #1f364d;
+ }  
 
 /* Desktops */
 @media (min-width: 768px) { body { padding: 4% 20% } }
@@ -20,6 +23,7 @@ body { font-family: sans-serif; }
 @media (max-width: 767px) { body { padding: 12% 8% } }
 
 h1 {
+    color: white;
     font-size: 64px;
     margin-bottom: 48px;
     font-weight: normal;
@@ -27,6 +31,7 @@ h1 {
 }
 
 h2 {
+    color: deeppink;
     font-size: 26px;
     margin-top: 30px;
     margin-bottom: 4px;
@@ -34,6 +39,7 @@ h2 {
 }
 
 h3 {
+    color: lightgreen;
     font-size: 24px;
     margin-top: 42px;
     margin-bottom: 4px;
@@ -41,7 +47,10 @@ h3 {
 }
 
 p {
+    color: #81b8cd;
     font-size: 18px;
     line-height: 1.6;
     margin-bottom: 20px;
 }
+
+a { color: white }
